--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^4.2.1",
     "node-fetch": "2",
